hphp/test/zend/bad/ext-gd/imagegammacorrect_error3.php
<?php
$image = imagecreatetruecolor(180, 30);
$gamma = imagegammacorrect($image, 'string', 5);

?>